- Complex technical text for Context-3 model testing   - Diagrams and figures for multimodal processing   - Research content relevant to AI4 conference attendees   - Multiple pages for demonstrating batch processing

--- a/docs/30-mongodb-atlas-setup.mdx
+++ b/docs/30-mongodb-atlas-setup.mdx
@@ -267,12 +267,12 @@ Our PDF documents will follow this schema:
 ```javascript
 {
   "_id": ObjectId("..."),
-  "filename": "sample.pdf",
+  "filename": "arxiv-paper.pdf",
   "page_number": 1,
   "content_type": "image", // or "text"
   "embedding": [0.123, -0.456, ...], // 1024 dimensions
   "metadata": {
-    "source_url": "https://example.com/sample.pdf",
+    "source_url": "https://arxiv.org/pdf/2501.12948",
     "processed_at": "2024-01-20T10:30:00Z",
     "total_pages": 10,
     "file_size": 2048576
