--- a/docs/50-vector-search-workflow.mdx
+++ b/docs/50-vector-search-workflow.mdx
@@ -311,7 +311,7 @@ curl -X POST http://localhost:5678/webhook/search \
       "content_type": "image",
       "preview": "Image content",
       "metadata": {
-        "source_url": "https://example.com/ml-basics.pdf",
+        "source_url": "https://arxiv.org/pdf/2501.12948",
         "processed_at": "2024-01-20T10:30:00Z"
       }
     }
