--- a/docs/73-workflows-library.mdx
+++ b/docs/73-workflows-library.mdx
@@ -17,6 +17,17 @@ Access all pre-built workshop workflows ready for import into n8n.
 5. **Update credentials** as needed
 6. **Test** the workflow
 
+### 📄 Workshop Test Document
+
+All workflows are pre-configured to work with our test document:
+**[Recent arXiv AI Research Paper](https://arxiv.org/pdf/2501.12948)**
+
+This paper provides excellent test content with:
+- Complex technical language for Context-3 testing
+- Mathematical diagrams for multimodal processing  
+- Multi-page structure for batch processing
+- Current AI research relevant to conference attendees
+
 ## 📋 Available Workflows
 
 ### 🎓 Foundation Workflows (01-02)
