--- a/docs/74-workflow-integration-guide.mdx
+++ b/docs/74-workflow-integration-guide.mdx
@@ -175,7 +175,7 @@ After importing any workflow, customize these elements:
 ```javascript
 // Test each node independently
 const testData = {
-  "pdf_url": "https://example.com/test.pdf",
+  "pdf_url": "https://arxiv.org/pdf/2501.12948",
   "query": "What is the main topic?"
 };
 
