--- a/docs/85-python-mongodb-approaches.mdx
+++ b/docs/85-python-mongodb-approaches.mdx
@@ -93,7 +93,7 @@ search = MultimodalSearch(
 ```python
 # Process a PDF document
 document_results = await search.ingest_document(
-    file_path="sample.pdf",
+    file_path="arxiv-paper.pdf",
     document_metadata={
         "source": "workshop",
         "category": "tutorial",
