--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -106,19 +106,19 @@ By the end of this workshop, you'll have created:
 
 <div style={{display: 'flex', gap: '2rem', flexWrap: 'wrap', marginTop: '2rem'}}>
   <div style={{textAlign: 'center'}}>
-    <img src="/img/n8n-logo.png" alt="n8n" width="80" />
-    <p><strong>n8n</strong><br/>Visual Workflow Automation</p>
+  <img src={require('@site/static/img/n8n-logo.png').default} alt="n8n" width="80" />
+      <p><strong>n8n</strong><br/>Visual Workflow Automation</p>
   </div>
   <div style={{textAlign: 'center'}}>
-    <img src="/img/mongodb-logo.png" alt="MongoDB" width="80" />
+  <img src={require('@site/static/img/mongodb-logo.png').default} alt="mongodb" width="80" />
     <p><strong>MongoDB Atlas</strong><br/>Vector Database</p>
   </div>
   <div style={{textAlign: 'center'}}>
-    <img src="/img/voyage-logo.png" alt="Voyage AI" width="80" />
+  <img src={require('@site/static/img/voyage-logo.png').default} alt="voyage" width="80" />
     <p><strong>Voyage AI</strong><br/>Multimodal Embeddings</p>
   </div>
   <div style={{textAlign: 'center'}}>
-    <img src="/img/gemini-logo.png" alt="Gemini" width="80" />
+  <img src={require('@site/static/img/gemini-logo.png').default} alt="gemini" width="80" />
     <p><strong>Gemini 2.0</strong><br/>AI Agent Capabilities</p>
   </div>
 </div>
