--- a/docs/status-badge-usage-guide.mdx
+++ b/docs/status-badge-usage-guide.mdx
@@ -125,7 +125,7 @@ Each component accepts configuration props:
 
 <!-- Custom test document for workflow testing -->
 <WorkflowTestBadge 
-  testDocument="https://example.com/your-test.pdf"
+  testDocument="https://arxiv.org/pdf/2501.12948"
   workflowEndpoint="https://your-codespace-5678.app.github.dev/webhook/custom"
 />
 
