--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,12 +1,14 @@
 ---
 sidebar_position: 1
 slug: /
-title: Workshop Overview
+title: Workshop Home
 ---
 
 # 🎓 Multimodal PDF Agent Workshop
 
-Welcome to the **Build a Multimodal PDF Agent with n8n** workshop! This interactive, hands-on experience will guide you through creating a production-ready AI system that processes PDFs using cutting-edge technologies.
+**Two Paths, One Amazing Destination: Build Intelligent Document Processing AI**
+
+Welcome to our comprehensive workshop! You'll learn to build sophisticated AI agents that understand both text and visual content in PDFs. Choose your adventure:
 
 <WorkshopTransition 
   slideTopics={[
@@ -72,25 +74,41 @@ Welcome to the **Build a Multimodal PDF Agent with n8n** workshop! This interact
   }
 ]} />
 
-## 🚀 Workshop Sections
+## 🚀 Workshop Flow
 
-### [🚀 Getting Started](/docs/intro)
-Begin your journey with environment setup and n8n basics. Choose between GitHub Codespaces for instant setup or local Docker development.
+### **📋 Start Here: Complete Overview**
+**[Workshop Overview & Slides](/docs/workshop-overview)** - Full presentation materials with integrated slides for instructors
 
-### [⚙️ Setup & Configuration](/docs/mongodb-atlas-setup)
-Configure MongoDB Atlas for vector search and set up Voyage AI for multimodal embeddings. These are the foundational services for your agent.
+### **🛤️ Decision Point: Choose Your Path**
+**[Path Selection Guide](/docs/path-selection)** - Choose between visual workflows or code-first development
 
-### [🔧 Building Workflows](/docs/pdf-processing-workflow)
-Create powerful automation workflows step by step. Start with PDF processing, implement vector search, and build an AI agent with tool calling.
+---
 
-### [📚 Workflows Library](/docs/workflows-library)
-Access all pre-built workshop workflows ready for import. Download and customize workflows for PDF processing, AI agents, and advanced multimodal capabilities.
+## 🎨 **Path A: Visual No-Code Development**
+**[n8n Workflow Path →](/docs/path-a-n8n-overview)**
 
-### [🎯 Advanced Topics](/docs/complete-multimodal-agent)
-Take your agent to production with advanced features like memory management, web interfaces, and production-grade vector search.
+Build with drag-and-drop visual workflows. Perfect for:
+- Business analysts and citizen developers
+- Visual learners who prefer flowcharts
+- Teams wanting rapid deployment
+- Production-ready systems from day one
 
-### [📚 Resources & Support](/docs/local-setup-tips)
-Find Docker best practices, troubleshooting guides, and community resources to help you succeed.
+**⏱️ Duration**: 2-3 hours  
+**🎯 Audience**: Beginner to Intermediate  
+
+---
+
+## 🐍 **Path B: Code-First Development** 
+**[Python & Jupyter Path →](/docs/path-b-python-overview)**
+
+Build with Python, Jupyter, and AI libraries. Perfect for:
+- Developers and data scientists  
+- Code-first learners
+- Maximum customization needs
+- Research and experimentation
+
+**⏱️ Duration**: 3-4 hours  
+**🎯 Audience**: Intermediate to Advanced
 
 ## 🎯 What You'll Build
 
@@ -164,7 +182,71 @@ By the end of this workshop, you'll have created:
 
 </WorkshopExercise>
 
-[**Start the Workshop →**](docs/intro)
+## 🚀 Ready to Begin?
+
+<div style={{display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: '1.5rem', marginTop: '2rem'}}>
+
+<div style={{textAlign: 'center', padding: '1.5rem', background: '#f8fafc', borderRadius: '8px', border: '2px solid #e2e8f0'}}>
+  <h3>📋 Instructor Guide</h3>
+  <p>Complete workshop overview with integrated presentation slides</p>
+  <a 
+    href="/docs/workshop-overview"
+    style={{
+      display: 'inline-block',
+      padding: '0.75rem 1.5rem',
+      background: '#374151',
+      color: 'white',
+      textDecoration: 'none',
+      borderRadius: '6px',
+      fontWeight: 'bold'
+    }}
+  >
+    Workshop Overview →
+  </a>
+</div>
+
+<div style={{textAlign: 'center', padding: '1.5rem', background: '#f0f9ff', borderRadius: '8px', border: '2px solid #00684A'}}>
+  <h3>🎨 Visual No-Code</h3>
+  <p>Build with n8n drag-and-drop workflows</p>
+  <a 
+    href="/docs/path-a-n8n-overview"
+    style={{
+      display: 'inline-block',
+      padding: '0.75rem 1.5rem',
+      background: '#00684A',
+      color: 'white',
+      textDecoration: 'none',
+      borderRadius: '6px',
+      fontWeight: 'bold'
+    }}
+  >
+    Start n8n Path →
+  </a>
+</div>
+
+<div style={{textAlign: 'center', padding: '1.5rem', background: '#fdf4ff', borderRadius: '8px', border: '2px solid #7C3AED'}}>
+  <h3>🐍 Code-First</h3>
+  <p>Build with Python and Jupyter notebooks</p>
+  <a 
+    href="/docs/path-b-python-overview"
+    style={{
+      display: 'inline-block',
+      padding: '0.75rem 1.5rem',
+      background: '#7C3AED',
+      color: 'white',
+      textDecoration: 'none',
+      borderRadius: '6px',
+      fontWeight: 'bold'
+    }}
+  >
+    Start Python Path →
+  </a>
+</div>
+
+</div>
+
+### 🤔 **Not Sure Which Path?**
+**[Take the Path Selection Quiz →](/docs/path-selection)** - We'll help you choose!
 
 ---
 
